issue #101: thin spring boot jar (#229)